[gd_scene load_steps=6 format=2]

[ext_resource path="res://source/Kapten.gd" type="Script" id=1]
[ext_resource path="res://source/KaptenWithtSword.tres" type="SpriteFrames" id=2]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 9, 13 )

[sub_resource type="CapsuleShape2D" id=3]
radius = 11.0
height = 10.0

[sub_resource type="CapsuleShape2D" id=4]

[node name="Kapten" type="KinematicBody2D"]
collision_mask = 5
script = ExtResource( 1 )
__meta__ = {
"_edit_horizontal_guides_": [ 480.0 ]
}

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = ExtResource( 2 )
animation = "attack2"
frame = 2
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -3 )
shape = SubResource( 2 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true
limit_left = 0
limit_top = -500
limit_bottom = 480
drag_margin_h_enabled = true
drag_margin_v_enabled = true
smoothing_enabled = true
drag_margin_left = 0.1
drag_margin_right = 0.1
editor_draw_limits = true
editor_draw_drag_margin = true

[node name="Attack_Area" type="Area2D" parent="." groups=["sword"]]
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Attack_Area"]
position = Vector2( 19, -2 )
shape = SubResource( 3 )
disabled = true

[node name="AirAttackArea" type="Area2D" parent="."]
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="AirAttackArea"]
position = Vector2( 6, 8 )
rotation = 1.5708
shape = SubResource( 4 )
disabled = true

[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
